@@ -26,6 +26,7 @@ $lang = array
     'not_authorized' => 'You are not authorized to view this host/service',
     'remote_user_missing' => 'Remote user is missing. Authentication check cancled. <a href="http://docs.pnp4nagios.org/faq/23">Read FAQ online</a>',
     'livestatus_socket_error' => 'Livestatus Socket error: %s (%s) <a href="http://docs.pnp4nagios.org/faq/24">Read FAQ online</a>',
-	'not_authorized_for_host_overview' => 'You are not authorized to access this host overview page.',
+    'not_authorized_for_host_overview' => 'You are not authorized to access this host overview page.',
     'xml-generic_error' => 'XML file "%s" not parsable.<p><strong>XML Errors:</strong>%s</p>',
+    'gd-missing' => 'PHP GD functions are missing. More on <a href="http://www.php.net/manual/en/book.image.php">www.php.net</a>',
 );
